Made admin component urls campaign compliant

--- a/src/app/components/articles/admin/admin.component.html
+++ b/src/app/components/articles/admin/admin.component.html
@@ -153,7 +153,7 @@
 
         </div>
 
-        <div class="btn btn-secondary" routerLink="{{routingService.getRoutePath('home1')}}">Back To Home</div>
+        <div class="btn btn-secondary" routerLink="{{routingService.getRoutePath('home1', {campaign: campaign})}}">Back To Home</div>
 
     </article>
 
