made article overview campaign compliant

--- a/src/app/components/articles/article-overview/article-overview.component.html
+++ b/src/app/components/articles/article-overview/article-overview.component.html
@@ -136,7 +136,7 @@
         </div>
 
         <div class="row">
-            <a routerLink="{{routingService.getRoutePath('home2')}}" class="mt-4 col-sm-3 btn btn-secondary">
+            <a routerLink="{{routingService.getRoutePath('home2', {campaign: campaign})}}" class="mt-4 col-sm-3 btn btn-secondary">
                 Back to Frontpage
             </a>
         </div>
