Made quest overview campaign compliant

--- a/src/app/components/articles/quest-overview/quest-overview.component.html
+++ b/src/app/components/articles/quest-overview/quest-overview.component.html
@@ -54,7 +54,7 @@
                         <td>
                             <a 
                             id="quest{{ quest.pk }}" 
-                            routerLink="{{routingService.getRoutePath('quest', {name: quest.name}) }}"
+                            routerLink="{{routingService.getRoutePath('quest', {name: quest.name, campaign: campaign}) }}"
                             >
                                  <span class="bold">{{ quest.name }}</span>
                             </a>
@@ -87,7 +87,7 @@
         <div class="row mx-0">
             <div 
             class="btn btn-secondary col-md-3" 
-            routerLink="{{routingService.getRoutePath('home1')}}"
+            routerLink="{{routingService.getRoutePath('home1', {campaign: campaign})}}"
             >
                 Back To Frontpage
             </div>
