--- a/src/app/components/articles/spells/spells.component.html
+++ b/src/app/components/articles/spells/spells.component.html
@@ -33,7 +33,7 @@
             </div>
         </div>
 
-        <div class="btn btn-secondary" routerLink="{{routingService.getRoutePath('home1')}}">
+        <div class="btn btn-secondary" routerLink="{{routingService.getRoutePath('home1', {campaign: campaign})}}">
             Back To Frontpage
         </div>
     </article>
