--- a/src/app/components/articles/rules/rules.component.html
+++ b/src/app/components/articles/rules/rules.component.html
@@ -25,7 +25,7 @@
 
         <!-- Button to Frontpage -->
         <div class="row mt-5">
-            <div class="btn btn-secondary col-md-3" routerLink="{{ routingService.getRoutePath('home1') }}">
+            <div class="btn btn-secondary col-md-3" routerLink="{{ routingService.getRoutePath('home1', {campaign: campaign}) }}">
                 Back To Frontpage
             </div>
         </div>
