--- a/src/app/components/articles/map/map.component.html
+++ b/src/app/components/articles/map/map.component.html
@@ -22,7 +22,7 @@
                 <!-- Add Map Button -->
                 <i 
                 class="fa fa-plus icon ml-3" 
-                routerLink="{{ routingService.getRoutePath('map-create') }}"
+                routerLink="{{ routingService.getRoutePath('map-create', {campaign: campaign}) }}"
                 ></i>
             </h3>
         </div>
@@ -32,6 +32,7 @@
             <div class="mb-5 col">
                 <app-leaflet-map 
                 [map]="articleData"
+                [campaign]="campaign"
                 ></app-leaflet-map>
             </div>
         </div>
@@ -41,7 +42,7 @@
         <!-- Footer (Move to other Article + Delete Article) -->
         <app-article-footer
         (delete)="deleteMap()"
-        [link]="routingService.getRoutePath('home1')"
+        [link]="routingService.getRoutePath('home1', {campaign: campaign})"
         [label]="'Back to Frontpage'"
         [deleteMessage]="'Delete Map of '+articleData.name+'?'"
         ></app-article-footer>
