Adjusted various components with formly fields to work with the new updated formly service. The main change is that it now needs "campaign" parameters and the overviewtypes are given as enum values, not pure strings

--- a/src/app/components/articles/character-article/character-article.component.html
+++ b/src/app/components/articles/character-article/character-article.component.html
@@ -86,6 +86,7 @@
         <!-- Encounters -->
         <app-encounter-accordion 
         [encounters]="articleData.encounters" 
+        [capaign]="campaign"
         [articleCharacter]="articleData"
         ></app-encounter-accordion>
 
