--- a/src/app/components/articles/character-article/character-article.component.html
+++ b/src/app/components/articles/character-article/character-article.component.html
@@ -28,7 +28,7 @@
                     {{ articleData.race }}
                     {{ createPlayerClassString() }}
                     <span *ngIf="articleData.organization"> of the 
-                        <a routerLink="{{ routingService.getRoutePath('organization', {name: articleData.organization_details.name}) }}">
+                        <a routerLink="{{ routingService.getRoutePath('organization', {name: articleData.organization_details.name, campaign: campaign}) }}">
                             {{ articleData.organization_details.name }}
                         </a>
                     </span> 
@@ -41,7 +41,8 @@
                     Last known location:
                     <a routerLink="{{ routingService.getRoutePath('location', {
                             name: articleData.current_location_details.name,
-                            parent_name: articleData.current_location_details.parent_location
+                            parent_name: articleData.current_location_details.parent_location,
+                            campaign: campaign
                         }) 
                     }}">
                     
@@ -77,7 +78,7 @@
         <div class="mb-5">
             <app-object-list    
             [articleType]="'item'" 
-            [createLink]="routingService.getRoutePath('item-character-create', {character_name: articleData.name})"
+            [createLink]="routingService.getRoutePath('item-character-create', {character_name: articleData.name, campaign: campaign})"
             [heading]="'Items of Note'"
             [items]="articleData.items"
             ></app-object-list>
@@ -93,7 +94,7 @@
         <!-- Footer (Move to other Article + Delete Article) -->
         <app-article-footer
         (delete)="deleteArticle()"
-        [link]="routingService.getRoutePath('character-overview')"
+        [link]="routingService.getRoutePath('character-overview', {campaign: campaign})"
         [label]="'Back to Characters'"
         [deleteMessage]="'Delete '+articleData.name+'?'"
         ></app-article-footer>
