--- a/src/app/components/wiki1-request/wiki1-request.component.html
+++ b/src/app/components/wiki1-request/wiki1-request.component.html
@@ -9,7 +9,7 @@
     </p>
     
     <div>
-        <a class="btn btn-secondary" routerLink="{{routingService.getRoutePath('home1')}}"> 
+        <a class="btn btn-secondary" routerLink="{{routingService.getRoutePath('home1', {campaign: constants.defaultCampaign})}}"> 
             To Wiki2 Frontpage 
         </a>
     </div>
