--- a/src/app/components/articles/marker-update/marker-update.component.html
+++ b/src/app/components/articles/marker-update/marker-update.component.html
@@ -15,7 +15,8 @@
             [isInUpdateState]=true 
             [link]="routingService.getRoutePath('location', {
                     parent_name: userModel.location_details.parent_location_name, 
-                    name: userModel.location_details.name
+                    name: userModel.location_details.name,
+                    campaign: campaign
                 }
             )"
             ></app-edit-toggle>
