--- a/src/app/components/articles/marker/marker.component.html
+++ b/src/app/components/articles/marker/marker.component.html
@@ -50,7 +50,8 @@
         (delete)="deleteArticle()"
         [link]="routingService.getRoutePath('location', {
                 parent_name: articleData.location_details.parent_location_name, 
-                name: articleData.location_details.name
+                name: articleData.location_details.name,
+                campaign: campaign
             }
         )"
         [label]="'Back to '+articleData.location_details.name"
