--- a/src/app/components/articles/search/search.component.html
+++ b/src/app/components/articles/search/search.component.html
@@ -35,7 +35,7 @@
         <div class="row">
             <div 
             class="btn btn-secondary col-md-3" 
-            routerLink="{{ routingService.getRoutePath('home1') }}"
+            routerLink="{{ routingService.getRoutePath('home1', {campaign: campaign}) }}"
             >
                 Back To Frontpage
             </div>
