--- a/src/app/components/utility/diary-entry-encounter/diary-entry-encounter.component.html
+++ b/src/app/components/utility/diary-entry-encounter/diary-entry-encounter.component.html
@@ -75,7 +75,7 @@ class="container"
                 <div class="d-inline-flex align-items-center flex-wrap">
                     <!-- Connection List -->
                     <span class="badge badge-secondary p-2 mr-2" *ngFor="let connection of cardData.encounterConnections">
-                        <a routerLink="{{ routingService.getRoutePath('character', {name: connection.character_details.name}) }}">
+                        <a routerLink="{{ routingService.getRoutePath('character', {name: connection.character_details.name, campaign: campaign}) }}">
                             {{ connection.character_details.name }}
                         </a>
                         <i 
