--- a/src/app/components/utility/encounter-accordion/encounter-accordion.component.html
+++ b/src/app/components/utility/encounter-accordion/encounter-accordion.component.html
@@ -48,7 +48,7 @@
                     <div class="d-inline-flex align-items-center flex-wrap">
                         <!-- Connection List -->
                         <span class="badge badge-secondary mr-2 p-2" *ngFor="let connection of encounter.encounterConnections">
-                            <a routerLink="{{ routingService.getRoutePath('character', {name: connection.character_details.name}) }}">
+                            <a routerLink="{{ routingService.getRoutePath('character', {name: connection.character_details.name, campaign: campaign}) }}">
                                 {{ connection.character_details.name }}
                             </a>
                             <i 
