--- a/src/app/components/utility/location-accordion/location-accordion.component.html
+++ b/src/app/components/utility/location-accordion/location-accordion.component.html
@@ -8,7 +8,8 @@
                 <a 
                 routerLink="{{routingService.getRoutePath('location', {
                         name: location.name, 
-                        parent_name: location.parent_location_details.name
+                        parent_name: location.parent_location_details.name,
+                        campaign: campaign
                     })
                 }}"
                 > 
@@ -35,7 +36,7 @@
                 <span class="mr-4"> Characters: </span>
                 <span class="d-inline-flex align-items-center flex-wrap">
                     <span class="badge badge-secondary mr-2 p-1 mb-1" *ngFor="let character of location.characters">
-                        <a routerLink="{{routingService.getRoutePath('character', {name: character.name}) }}">
+                        <a routerLink="{{routingService.getRoutePath('character', {name: character.name, campaign: campaign}) }}">
                             {{ character.name }}
                         </a>
                     </span>
