--- a/src/app/components/utility/recently-updated-articles-list/recently-updated-articles-list.component.html
+++ b/src/app/components/utility/recently-updated-articles-list/recently-updated-articles-list.component.html
@@ -6,7 +6,7 @@
     </h3>
 
     <div class="row">
-        <div class="mycolpadding col-6 col-md-4 col-lg-3 col-xl-2 mb-4" *ngFor="let article of articles">
+        <div class="mycolpadding col-6 col-md-4 col-lg-3 mb-4" *ngFor="let article of articles">
             <a 
             routerLink="{{ article.getAbsoluteRouterUrl() }}" 
             class="card"
