Added way to deal with when no showWrapperLabel property is defined

--- a/src/app/components/utility/session-update-wrapper/session-update-wrapper.component.html
+++ b/src/app/components/utility/session-update-wrapper/session-update-wrapper.component.html
@@ -1,5 +1,5 @@
 <!-- Heading --> 
-<label *ngIf="to.additionalProperties.showWrapperLabel">
+<label *ngIf="to.additionalProperties?.showWrapperLabel">
     <strong>
         {{to.label}}
         <span *ngIf="to.required">*</span>
