Added marker type to marker component

--- a/src/app/components/articles/marker/marker.component.html
+++ b/src/app/components/articles/marker/marker.component.html
@@ -24,6 +24,13 @@
             <span class="col-md-5 col-9">{{articleData.latitude}}</span>
         </div>
 
+        <!-- Marker Type -->
+        <div class="row">
+            <div class="col-md-4 col-0"></div>
+            <span class="bold col-3">Marker type: </span> 
+            <span class="col-md-5 col-9">{{articleData.type_details.name}}</span>
+        </div>
+
         <!-- Icon -->
         <div class="row">
             <div class="col-md-4 col-0"></div>
