Made cardMixin comply with campaign and added more functionality to it, applied this to all card thingies: Rule, Spell and Diaryentry

--- a/src/app/components/articles/rules/rules.component.html
+++ b/src/app/components/articles/rules/rules.component.html
@@ -11,6 +11,7 @@
             <app-rule
             #ruleElements
             [cardData] = "rule"
+            [campaign_details]="campaign_details"
             [index] = "i"
             (cardDelete) = "onRuleDelete(i)"
             ></app-rule>
