Moved logic for insert and cut-insert and swap from frontend to backend

--- a/src/app/components/utility/diary-entry-encounter-list/diary-entry-encounter-list.component.html
+++ b/src/app/components/utility/diary-entry-encounter-list/diary-entry-encounter-list.component.html
@@ -36,7 +36,7 @@
             [diaryEntryView]="diaryEntryView"
             [campaign_details]="diaryEntry.campaign_details"
             (cardDelete)="deleteEncounter(encounterIndex)"
-            (cardCreate)="onEncounterCreate($event, encounterIndex)"
+            (cardCreate)="onEncounterCreate($event)"
             (encounterOrderIncrease)="onEncounterOrderIncrease(encounterIndex)"
             (encounterOrderDecrease)="onEncounterOrderDecrease(encounterIndex)"
             (excisionStart)="onExcisionStart(encounterIndex)"
@@ -51,7 +51,7 @@
                         <i class="fa fa-3x fa-plus pointer" title="Add Encounter to Diaryentry"></i>
                     </div>
                     <!-- insertExcisedEncounter has encounterIndex+1 because the insertion is supposed to happen AFTER this encounter, not before it -->
-                    <div class="btn btn-secondary" [ngClass]="{'disabled': cutEncounterIndex == null}" (click)="insertExcisedEncounter(encounterIndex + 1)">
+                    <div class="btn btn-secondary" [ngClass]="{'disabled': cutEncounterIndex == null}" (click)="insertExcisedEncounter(encounterIndex)">
                         <i class="fas fa-3x fa-file-import pointer" title="Insert Cut Encounter"></i>
                     </div>
                 </div>
