--- a/src/app/components/articles/diaryentry-article-update/diaryentry-article-update.component.html
+++ b/src/app/components/articles/diaryentry-article-update/diaryentry-article-update.component.html
@@ -5,7 +5,7 @@
             <app-edit-toggle [isInUpdateState]=true [link]="'..'"></app-edit-toggle>
 
             <h2 class="text-center">
-                Updating Diaryentry {{ userModel.title }}
+                Updating Diaryentry "{{ userModel.title }}"
             </h2>
         </div>
         
