--- a/src/app/components/utility/campaign/campaign.component.html
+++ b/src/app/components/utility/campaign/campaign.component.html
@@ -1,55 +1,104 @@
-<div class="card row mx-1 mb-3 px-4 pt-3 pb-1" [ngClass] = "{'animate__animated animate__fadeInUp': isInCreateState()}" #card>
-    <!-- Rules Panel Heading -->
-    <h4
-    class="pointer col-12 justify-content-between d-flex align-items-center" 
-    (click)="toggleCard()"> 
-        <span>{{ cardData.name }}</span>
-        <i [ngClass]="{'fa icon': true, 'fa-chevron-down': !isOpen, 'fa-chevron-up': isOpen}"></i>
-    </h4>
-
-    <!-- Rules Panel Content -->
-    <div class="mb-3 w-100" [ngbCollapse]="!isOpen">
-        <div class="col-12">
-            <!-- Separator -->
-            <hr class="white-separator mb-2">
-
-            <!-- Heading -->
-            <div class="mb-3" *ngIf="isInDisplayState()">
-                <h4 class="d-inline"> Members </h4>
-                <div class="btn btn-primary float-right">
-                    <span class="fa fa-plus"></span>
-                    Add Member
-                </div>
-            </div>
-
-
-            <!-- Body -->
-            <div *ngIf="isInDisplayState()" class="d-flex flex-column">
-                <div *ngFor="let user of cardData.members">
-                    {{user.name}}
-                </div>
-            </div>
-
-            <app-formly-formcontainer 
-            *ngIf="isInCreateState() || isInUpdateState()"
-            [model]="userModel" 
-            [fields]="formlyFields" 
-            (formlySubmit)="onSubmit()" 
-            (formlyCancel)="onCancel()"
-            ></app-formly-formcontainer>
+<div class="main">
+    <article *ngIf="articleData; else loading" class="container">
+        <!-- Heading -->
+        <div class="row">
+            <h1 class="text-center col"> {{ articleData.name }} </h1>
         </div>
 
-    </div>
+        <div class="card my-3 p-3">
+            <h3 class="text-center">Background</h3>
+            <!-- Image Gallery -->
+            <app-image-gallery
+            [article_type]="'campaign'"
+            [article_pk]="this.articleData.pk"
+            [images]="[]"
+            ></app-image-gallery>
+        </div>
+
+
+        <!-- Members & Admins-->
+        <div class="mb-3 row">
+            <div class="col-sm-6 col-12">
+                <div class="p-3 card">
+                    <h3 class="text-center">
+                        <span class="fas fa-user-secret"></span>
+                        Admins
+                    </h3>
+
+                    <div *ngFor="let user of articleData.admins">
+                        {{user.username}}
+
+                        <app-delete-toggle
+                        [deleteMessage]="'Remove '+ user.username +' as admin?'"
+                        (deleteEvent)="onRemoveAdmin(user)"
+                        class="float-right px-0"
+                        ></app-delete-toggle>
+                    </div>
+
+                    <!-- Form -->
+                    <app-formly-formcontainer 
+                    *ngIf="addAdminState; else addAdminButton"
+                    [model]="adminModel" 
+                    [fields]="adminFormlyFields" 
+                    (formlySubmit)="onAddAdminSubmit()" 
+                    (formlyCancel)="addAdminState=false"
+                    ></app-formly-formcontainer>
+
+
+                </div>
+            </div>
+
+            <div class="col-sm-6 col-12">
+                <div class="p-3 card">
+                    <h3 class="text-center">
+                        <span class="fas fa-users"></span>
+                        Party members
+                    </h3>
+
+                    <div *ngFor="let user of articleData.members">
+                        {{user.username}}
+
+                        <app-delete-toggle
+                        [deleteMessage]="'Remove '+ user.username +' as member?'"
+                        (deleteEvent)="onRemoveMember(user)"
+                        class="float-right px-0"
+                        ></app-delete-toggle>
+                    </div>
+
+                    <!-- Form -->
+                    <app-formly-formcontainer 
+                    *ngIf="addMemberState; else addMemberButton"
+                    [model]="memberModel" 
+                    [fields]="memberFormlyFields"
+                    (formlySubmit)="onAddMemberSubmit()" 
+                    (formlyCancel)="addMemberState=false"
+                    ></app-formly-formcontainer>
+                </div>
+            </div>
+        </div>
+
+        <!-- Footer (Move to other Article + Delete Article) -->
+        <app-article-footer
+        (delete)="deleteArticle()"
+        [link]="routingService.getRoutePath('home1', {campaign: articleData.name})"
+        [label]="'Back to ' + articleData.name"
+        [deleteMessage]="'Deactivate Campaign ?'"
+        ></app-article-footer>
+        
+    </article>
+    <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
 
-<ng-template #formField>
-    <div id="edit-section">
-        <!-- Form -->
-        <app-formly-formcontainer 
-        [model]="userModel" 
-        [fields]="formlyFields" 
-        (formlySubmit)="onSubmit()" 
-        (formlyCancel)="onCancel()"
-        ></app-formly-formcontainer>
-    </div>
+<ng-template #addMemberButton>
+    <button class="btn btn-primary mt-3" (click)="toggleMemberAddState()">
+        <span class="fas user-plus icon"> </span>
+        Add Member
+    </button>
+</ng-template>
+
+<ng-template #addAdminButton>
+    <button class="btn btn-primary mt-3" (click)="toggleAdminAddState()">
+        <span class="fas user-plus icon"> </span>
+        Add Admin
+    </button>
 </ng-template>
