--- a/src/app/components/articles/article-overview/article-overview.component.html
+++ b/src/app/components/articles/article-overview/article-overview.component.html
@@ -22,7 +22,7 @@
                 <div *ngFor="let playerCharacter of playerCharacters" class="mb-4 col-md-4 col-sm-6 col-12">
                     <a routerLink="{{ playerCharacter.getAbsoluteRouterUrl() }}">
                         <div class="card">
-                            <img *ngIf="playerCharacter.images" class="card-img-top" [src]="constants.wikiUrl + playerCharacter.images[0]?.image" alt="An image displaying a player character">
+                            <img *ngIf="playerCharacter.images" class="card-img-top" [src]="constants.wikiUrl + playerCharacter.images[0]" alt="An image displaying a player character">
                             <div class="card-body p-3">
                                 <h5 class="card-title mb-0 text-center">{{ playerCharacter.name_full }}</h5>
                             </div>
