--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@ class="d-flex base-page"
 
     <div 
     id="background-div"
-    class="d-flex justify-content-center pb-4 w-100"
+    class="d-flex justify-content-center w-100"
     >
         <router-outlet #routerOutlet></router-outlet>
     </div>    
