--- a/src/styles.scss
+++ b/src/styles.scss
@@ -247,6 +247,7 @@ a:hover{
     background-color:rgba(27, 31, 34, 0.85);
     border-radius: 6px;
     padding: 2.5rem 2.5rem 2.5rem 2.5rem;
+	margin-bottom: 1.5rem !important;
     color: white;
 	font-size: 18px;
 }
