Added link to campaign overview to sidebar

--- a/src/app/components/utility/sidebar/sidebar.component.html
+++ b/src/app/components/utility/sidebar/sidebar.component.html
@@ -30,6 +30,13 @@
                     </a>
                 </li>
 
+                <li>
+                    <a class="on-hover-show" routerLink="{{ routingService.getRoutePath('campaign-overview')}}">
+                        <i class="fas fa-globe-europe"></i>
+                        <span> Campaign Overview </span>
+                    </a>
+                </li>
+
                 <!-- Admin Section -->
                 <li *ngIf="showAdminSection">
                     <a class="on-hover-show" routerLink="{{ routingService.getRoutePath('admin') }}" >
