Added the first of a couple typical wiki colors that shell be changeable in the future

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -118,6 +118,7 @@ body {
 	--lightest-red: hsl(358, 100%, 80%);
 	--link-blue: 	hsl(228, 100%, 76%);
 	--beige:		#b9b987;
+	--wiki-background-1: rgba(27, 31, 34, 0.85);
 
 }
 
