Background image is now handled via the background image component
The idea is that the component fetches the URLs to all campaign images at the start upon first load. Then, when you call a specific page, that page writes the currently visited campaign into the global url params service. Background image has a subscription to that, so when an update occurs there, it'll swap images with a fade in fade out animation.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@ class="d-flex base-page"
     <div 
     class="sidebar-wrapper" 
     [ngClass]="{'swiped-right': showSidebarSubject.getValue(), 'swiped-left': !showSidebarSubject.getValue()}"
-    *ngIf="isOnCampaignOverviewPage"
+    *ngIf="allowSidebar"
     >
         <app-sidebar
         [showSidebar]="showSidebarSubject"
@@ -33,8 +33,6 @@ class="d-flex base-page"
     class="d-flex justify-content-center w-100"
     >
         <router-outlet #routerOutlet></router-outlet>
-    </div>    
+    </div>
+    <app-background-image></app-background-image>
 </div>
-
-<!-- BG -->
-<div id="bg"></div>
