--- a/src/app/components/articles/campaign-overview/campaign-overview.component.scss
+++ b/src/app/components/articles/campaign-overview/campaign-overview.component.scss
@@ -19,22 +19,34 @@
     z-index: 1;
 }
 
-.campaign:hover {
-    border-left: 5px solid white;
-    border-right: 5px solid white;
+.campaign:hover .campaign-overlay h3{
+    color: var(--link-blue);
+    transform: scale(1.2);
 }
 
-.campaign:hover img.background-image{
-    transform: scale(0.95);
+.campaign .campaign-overlay h3{
+    transition: transform 0.2s ease-in-out;
 }
+
 
 .background-image{
     width: 100%;
     height: 100vh;
     object-fit: cover;
-    transition: transform 0.2s ease-in-out;
+    opacity: 0.5;
+    transition: opacity 0.2s ease-in-out;
+}
+
+.campaign:hover .background-image{
+    opacity: 1;
 }
 
 .background-image-background{
     background-color: black;
+}
+
+@media(max-width: 576px){
+    .background-image{
+        height: 33vh;
+    }
 }
